--- a/.env.docker
+++ b/.env.docker
@@ -2,7 +2,7 @@ APP_NAME=test
 APP_ENV=local
 APP_KEY=base64:RxsuX786O5nzzOm7GpwlCpurF4SFUfv+C8YwFtdXSdI=
 APP_DEBUG=true
-APP_URL=http://test.test
+APP_URL=http://localhost:82
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -48,5 +48,5 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
