--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1.0",
@@ -22,7 +25,8 @@
         "nunomaduro/collision": "^6.1",
         "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "stechstudio/laravel-php-cs-fixer": "^3.1"
     },
     "autoload": {
         "psr-4": {
@@ -42,7 +46,6 @@
             "@php artisan package:discover --ansi",
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:meta"
-
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
@@ -54,7 +57,8 @@
             "@php artisan key:generate --ansi"
         ],
         "larastan": "./vendor/bin/phpstan analyse",
-        "generate-api-doc": "@php artisan l5-swagger:generate"
+        "generate-api-doc": "@php artisan l5-swagger:generate",
+        "cs-fix": "@php artisan fixer:fix --using-cache=no --diff"
     },
     "extra": {
         "laravel": {
