--- a/.env.docker
+++ b/.env.docker
@@ -15,6 +15,13 @@ DB_DATABASE=test
 DB_USERNAME=test_admin
 DB_PASSWORD=1
 
+#DB_CONNECTION=sqlsrv
+#DB_HOST=idbank_mssql
+#DB_PORT=1433
+#DB_DATABASE=test
+#DB_USERNAME=sa
+#DB_PASSWORD=Pass1234
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
