--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,7 +30,7 @@ jobs:
       uses: Harmon758/postgresql-action@v1.0.0
       with:
         # Version of PostgreSQL to use
-        postgresql version: default
+        postgresql version: latest
         # POSTGRES_DB - name for the default database that is created
         postgresql db: test 
         # POSTGRES_USER - create the specified user with superuser power
