--- a/.env.docker
+++ b/.env.docker
@@ -1,4 +1,4 @@
-APP_NAME=test
+APP_NAME=plumber
 APP_ENV=local
 APP_KEY=base64:RxsuX786O5nzzOm7GpwlCpurF4SFUfv+C8YwFtdXSdI=
 APP_DEBUG=true
@@ -9,14 +9,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=test_pgsql
+DB_HOST=${APP_NAME}_pgsql
 DB_PORT=5432
-DB_DATABASE=test
-DB_USERNAME=test_admin
+DB_DATABASE=${APP_NAME}
+DB_USERNAME=${APP_NAME}_admin
 DB_PASSWORD=1
 
 #DB_CONNECTION=sqlsrv
-#DB_HOST=idbank_mssql
+#DB_HOST="${APP_NAME}_mssql"
 #DB_PORT=1433
 #DB_DATABASE=test
 #DB_USERNAME=sa
